--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">重庆时时彩</string>
+    <string name="app_name">六合神算</string>
     <string name="dlt">\t\t\t超级大乐透是指由购买者从01—35共35个号码中选取5个号码为前区号码，并从01—12共12个号码中选取2个号码为后区号码组合为一注彩票进行的基本投注。每注金额人民币2元。
 在本站中，大乐透支持的玩法有：大乐透单式投注，大乐透复式投注，大乐透方案粘贴
 大乐透单式投注：由购买者从01—35共35个号码中选取5个号码为前区号码，并从01—12共12个号码中选取2个号码为后区号码，组合为一注彩票进行的基本投注。
